crates/pg_syntax/tests/snapshots/postgres_regress/portals@133.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: insert into tt1 values(2);
---
InsertStmt@0..26
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "tt1"
  Whitespace@15..16 " "
  SelectStmt@16..24
    Values@16..22 "values"
    Ascii40@22..23 "("
    List@23..24
      AConst@23..24
        Iconst@23..24 "2"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

