crates/pg_syntax/tests/snapshots/postgres_regress/portals@146.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT name, statement, is_holdable, is_binary, is_scrollable FROM pg_cursors;"
---
SelectStmt@0..78
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      NameP@7..11 "name"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..22
    ColumnRef@13..22
      Statement@13..22 "statement"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..35
    ColumnRef@24..35
      Ident@24..35 "is_holdable"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ResTarget@37..46
    ColumnRef@37..46
      Ident@37..46 "is_binary"
  Ascii44@46..47 ","
  Whitespace@47..48 " "
  ResTarget@48..61
    ColumnRef@48..61
      Ident@48..61 "is_scrollable"
  Whitespace@61..62 " "
  From@62..66 "FROM"
  Whitespace@66..67 " "
  RangeVar@67..77
    Ident@67..77 "pg_cursors"
  Ascii59@77..78 ";"

