crates/pg_syntax/tests/snapshots/postgres_regress/portals@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT name FROM pg_cursors ORDER BY 1;
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      NameP@7..11 "name"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeVar@17..27
    Ident@17..27 "pg_cursors"
  Whitespace@27..28 " "
  SortBy@28..38
    Order@28..33 "ORDER"
    Whitespace@33..34 " "
    By@34..36 "BY"
    Whitespace@36..37 " "
    AConst@37..38
      Iconst@37..38 "1"
  Ascii59@38..39 ";"

