crates/pg_syntax/tests/snapshots/postgres_regress/portals@163.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO uctest VALUES (1, 'one'), (2, 'two'), (3, 'three');"
---
InsertStmt@0..63
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "uctest"
  Whitespace@18..19 " "
  SelectStmt@19..61
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..35
      AConst@27..28
        Iconst@27..28 "1"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..35
        Sconst@30..35 "'one'"
    Ascii41@35..36 ")"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    Ascii40@38..39 "("
    List@39..47
      AConst@39..40
        Iconst@39..40 "2"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..47
        Sconst@42..47 "'two'"
    Ascii41@47..48 ")"
    Ascii44@48..49 ","
    Whitespace@49..50 " "
    Ascii40@50..51 "("
    List@51..61
      AConst@51..52
        Iconst@51..52 "3"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..61
        Sconst@54..61 "'three'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

