crates/pg_syntax/tests/snapshots/postgres_regress/portals@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO uctest VALUES (10, 'ten');"
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "uctest"
  Whitespace@18..19 " "
  SelectStmt@19..36
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..36
      AConst@27..29
        Iconst@27..29 "10"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..36
        Sconst@31..36 "'ten'"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

