crates/pg_syntax/tests/snapshots/postgres_regress/portals@223.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM uctest WHERE f1 = 10;
---
DeleteStmt@0..33
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "uctest"
  Whitespace@18..19 " "
  Where@19..24 "WHERE"
  Whitespace@24..25 " "
  AExpr@25..32
    ColumnRef@25..27
      Ident@25..27 "f1"
    Whitespace@27..28 " "
    Ascii61@28..29 "="
    Whitespace@29..30 " "
    AConst@30..32
      Iconst@30..32 "10"
  Ascii59@32..33 ";"

